--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,8 @@ body {
 }
 #keyboard-container .btn:hover {
     border: 1px solid green;
-    background-color: rgb(158, 158, 158);
-    color: white;
+
+    
 }
 #keyboard-container .btn {
     border: 1px solid yellow;
@@ -66,7 +66,7 @@ body {
     width: 150px;
     background-color: rgb(214, 214, 214);
 }
-#keyboard-container .btn-Del {
+#keyboard-container .btn-Delete {
     width: 100px;
     background-color: rgb(214, 214, 214);
 }
@@ -114,4 +114,16 @@ body {
  #keyboard-container .btn-ArrowLeft, 
  #keyboard-container .btn-ArrowDown {
     background-color: rgb(214, 214, 214);
+}
+
+
+#keyboard-container .clicked {
+    background-color: rgb(52, 104, 247);
+    color:white; 
+}
+
+#property {
+    text-align: center;
+    font-size: 18px;
+    padding: 10px;
 }
